CSS fix for tablets and mobile
no more horizontal scroll bars, can almost be implemented at specific width if needed.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -151,7 +151,6 @@ ul,
 ol {
   line-height: 1.6em;
   margin: 0 0 30px 0;
-	word-break: 
 }
 blockquote {
   padding: 10px 20px;
